Added Card Revealing Functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Matching Game!</title>
 </head>
 <body>
-    <h1>Welcome to my game!</h1>
+    <h1>Matching Game!</h1>
     <div class="board">
         <div class="square"></div>
         <div class="square"></div>
@@ -19,7 +19,7 @@
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
-        <div class="square"></div>
+        <!-- <div class="square"></div> -->
       </div>
       <div class="buttonColumn"></div>
       <div class="buttons">
