finished reveal functionality

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="buttons">
       <button class="newGame">New Game</button>
       <button class="quitGame">Quit Game</button>
+      <div class="clock">Times Ticking!</div>
        </div>
     <div></div>
     <div class="results"></div>
