Added Some Styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Matching Game!</h1>
+    <h3 class="correctMatches">Correct Matches: 0</h3>
     <div class="board">
         <div class="square" id="square1"></div>
         <div class="square" id="square2"></div>
@@ -25,7 +26,6 @@
       <div class="buttons">
       <button class="newGame">New Game</button>
       <button class="quitGame">Quit Game</button>
-      <div class="clock">Times Ticking!</div>
        </div>
     <div></div>
     <div class="results"></div>
