Added Matches Count Feature

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Matching Game!</h1>
-    <h3 class="correctMatches">Correct Matches: 0</h3>
+    <h3 id="correctMatches">Correct Matches: 0</h3>
     <div class="board">
         <div class="square" id="square1"></div>
         <div class="square" id="square2"></div>
