Changed number of cards

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="./app.js" defer></script>
     <title>Matching Game!</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Matching Game!</h1>
     <h3 id="correctMatches">Correct Matches: 0</h3>
-    <div class="board">
+    <div class="board-container">
+        <div class="board">
         <div class="square" id="square1"></div>
         <div class="square" id="square2"></div>
         <div class="square" id="square3"></div>
@@ -20,16 +21,18 @@
         <div class="square" id="square6"></div>
         <div class="square" id="square7"></div>
         <div class="square" id="square8"></div>
-        <!-- <div class="square"></div> -->
-      </div>
-      <div class="buttonColumn"></div>
-      <div class="buttons">
+        <div class="square" id="square9"></div>
+        <div class="square" id="square10"></div>
+        <div class="square" id="square11"></div>
+        <div class="square" id="square12"></div>
+        </div>
+    </div>
+    <div class="buttonColumn"></div>
+    <div class="buttons">
       <button class="newGame">New Game</button>
       <button class="quitGame">Quit Game</button>
-       </div>
-    <div></div>
+    </div>
+    <br />
     <div class="results"></div>
-
-</body>
-
+  </body>
 </html>
