Adjusted button styling

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="square" id="square12"></div>
         </div>
     </div>
-    <div class="buttonColumn"></div>
-    <div class="buttons">
-      <button class="newGame">New Game</button>
-      <button class="quitGame">Quit Game</button>
+    <div class="buttonContainer">
+        <div class="buttons">
+            <button class="newGame">New Game</button>
+            <button class="quitGame">Quit Game</button>
+        </div>
     </div>
-    <br />
     <div class="results"></div>
   </body>
 </html>
